	  written by Roger Venning. This allows administrators to set
	  the TOS precedence bits and/or the source IP from a set of
	  available IPs based upon some ACLs, generally to map different
	  users to different outgoing links and traffic profiles.
	- Added 'max-conn' option to 'cache_peer'
	- Added SSL gatewaying support, allowing Squid to act as a SSL server
	  in accelerator setups.
	- Countless other small things and fixes

Changes to Squid-2.4.STABLE6 (March 19, 2002):

	- The patch for 2.4.STABLE5 was insufficnetly tested and
	  introduced a bug that causes frequent assertions when
	  handling DNS PTR answers.

Changes to Squid-2.4.STABLE5 (March 15, 2002):

	- Fixed an array bounds bug in lib/rfc1035.c.  This bug
	  could allow a malicious DNS server to send bogus replies
	  and corrupt the heap memory.

Changes to Squid-2.4.STABLE4 (Feb 19, 2002)

	- htcp_port 0 now properly disabled htcp
        - Fixed problem with certain non-anonymous ftp:// style URL's
	- SNMP bugfixes including several memory leaks

Changes to Squid-2.4.STABLE3 (Nov 28, 2001):

	- Fixed bug #255: core dump on SSL/CONNECT if access denied by
	  miss_access
	- Fixed bug #246: corrupt on-disk meta information preventing
	  rebuilds of lost swap.state files
	- Fixed bug #243: squid_ldap_auth now supports spaces in passwords
	- Fixed a coredump when creating FTP directories
	- Fixed a compile time problem with statHistDump prototype mistmatch,
	  reported by some compilers
	- Fixed a potential coredump situation on snmpwalk in certain
	  configurations
	- Fixed bug #229: filedescriptor leakage in the "aufs" cache_dir
	  store implementation
	- Serbian error message translations

Changes to Squid-2.4.STABLE2 (Aug 24, 2001):

	- Expanded configure's GCC opimization disabling check to
	  include GCC 2.95.3
	- avoid negative served_date in storeTimestampsSet().
	- Made 'diskd' pathnames more configurable
	- Make sure squid parent dies if child is killed with
	  KILL signal