@@ -3,7 +3,7 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.257 2002/01/28 17:49:24 hno Exp $
+dnl  $Id: configure.in,v 1.258 2002/03/30 16:42:57 hno Exp $
 dnl
 dnl
 dnl
@@ -11,7 +11,7 @@ AC_INIT(src/main.c)
 AC_CONFIG_AUX_DIR(cfgaux)
 AM_INIT_AUTOMAKE(squid, 2.6-DEVEL)
 AM_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.257 $)dnl
+AC_REVISION($Revision: 1.258 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AM_MAINTAINER_MODE
 
@@ -2160,6 +2160,7 @@ AC_OUTPUT([\
 	src/auth/basic/helpers/YP/Makefile \
 	src/auth/basic/helpers/getpwnam/Makefile \
 	src/auth/basic/helpers/multi-domain-NTLM/Makefile \
+	src/auth/basic/helpers/SASL/Makefile \
 	src/auth/digest/Makefile \
 	src/auth/digest/helpers/Makefile \
 	src/auth/digest/helpers/password/Makefile \
