@@ -1,0 +1,13 @@
+#
+#  Makefile for the Squid SASL authentication helper
+#
+#  $Id: Makefile.am,v 1.1 2002/03/30 16:42:58 hno Exp $
+#
+#  Uncomment and customize the following to suit your needs:
+#
+
+INCLUDES	= -I. -I$(top_builddir)/include -I$(top_srcdir)/include \
+		  -I$(top_srcdir)/src/
+
+libexec_PROGRAMS	= sasl_auth
+LDADD			= -lsasl $(XTRA_LIBS)
